# dolly-gd

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile.toml  README.md  build.rs  dolly-gd.gdnlib  plugin.cfg
.cargo/: config.toml
.github/workflows/: check-and-lint.yml  pre-commit.yml
icons/: Camera3D.svg.import  Object.svg.import
native/: Arm.gdns  DollyCamera.gdns  DollyPlugin.gdns  LockPosition.gdns  LookAt.gdns  Position.gdns  Rotation.gdns  Smooth.gdns  YawPitch.gdns
src/: camera.rs  lib.rs  plugin.rs
src/dolly/: driver.rs  mod.rs  rig.rs  utils.rs
src/dolly/drivers/: arm.rs  lock_position.rs  look_at.rs  position.rs  rotation.rs  smooth.rs  yaw_pitch.rs
templates/: native.jinja2
