[package]
name = "dolly-gd"
version = "0.1.0"
authors = ["florianvazelle <ponythugflorian@gmail.com>"]
edition = "2021"
description = "Composable camera rigs for Godot Engine"
rust-version = "1.56"
license = "MIT"
keywords = ["gamedev", "camera", "3d", "godot", "godot-rust"]
categories = ["game-development"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10"
